Latihan 1.2: menambahkan basic HTML

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Title yang ingin ditampilkan</title>
 <body>
 
 <h1>This is a heading</h1>
