Latihan 1.3: Menambahkan konten pada Elemen Body

--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
 <html>
-<title>Title yang ingin ditampilkan</title>
+<head>
+<title>Title yang ingin di tampilkan</title>
+<style>
+body {
+    background-color: purple;
+  }
+  
+  h1 {
+    color: white;
+    text-align: center;
+  }
+  
+  h2 {
+    color: white;
+    text-align: center;
+    font-family: verdana;
+    font-size: 20px;
+  }
+</style>
+</head>
 <body>
 
+    <h1>RISTY MELYANA</h1>
+    <hr size="2px">
+    <h2> Web Developer</h2> 
 
 </body>
 </html>
